fixed contact page background, spacing, color

--- a/contact.css
+++ b/contact.css
@@ -16,7 +16,7 @@
 
 
 html, body{
-    background-color: rgb(11,20,27);
+    background-color: white;
     /* width: 100%; */
     min-height: 100%;
     margin: 0;
@@ -35,7 +35,7 @@ html, body{
 #info{
     margin-right: 48%;
     margin-top: 10vh;
-    color: white;   
+    /* color: rgb(128, 126, 126); */
     margin-left: 5vw;
     width: 19rem;
     /* border: solid white 1px; */
@@ -52,7 +52,7 @@ html, body{
     cursor: pointer;
     margin-top: 1rem;
     margin-bottom: 1rem;
-
+    color: rgb(128, 126, 126);
     animation: appear;
     animation-duration: 1.5s;
     z-index: 9999;
@@ -68,8 +68,12 @@ html, body{
 }
 
 
-.details:hover{
+/* .details:hover{
+    color: rgb(131, 97, 5);
     text-shadow: 0px -2px 0px #000000, 0 0 5px rgba(255, 255, 255, 0.8), 0 -4px 15px rgba(255, 255, 255, 0.5);
+} */
+.contactinfo:hover{
+    color: rgb(131, 97, 5);
 }
 
 .icons{
@@ -78,7 +82,7 @@ html, body{
 
 .denali{
     padding-left: 2.5rem;
-    color: white;
+    color: rgb(128, 126, 126);
     font-family: 'Ailerons', Arial, Helvetica, sans-serif;
     font-size: 2em;
     animation: reveal;
@@ -103,7 +107,7 @@ html, body{
 .contactinfo{
     padding-left: .5rem;
     text-decoration: none;
-    color: white;
+    color: rgb(128, 126, 126);
 }
 
 #A{
@@ -150,11 +154,10 @@ html, body{
 #mail{
     /* border: solid white 1px; */
     padding-right: 0.2rem;
-    margin-left: 0.2rem;
+    /* margin-left: 0.2rem; */
     margin-top: 0;
     margin-bottom: 0;
 }
-
 
 @media(max-width:480px){
 	#info{
